# tm_data_types

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  codecov.yml  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: check-api-for-breaking-changes.yml  codeql-analysis.yml  dependency-review.yml  package-build.yml  package-release.yml  package-testpypi.yml  publish-api-comparison.yml  publish-test-results.yml  sbom-scan.yml  tek-repo-lint.yml  test-code.yml  test-docs.yml  update-python-and-pre-commit-dependencies.yml
docs/: basic_usage.md  generate_api_pages.py  glossary.md  known_words.txt  macros.py  requirements.txt
docs/_static/css/: theme_overrides.css
docs/advanced/: writing_to_a_file.md
examples/: type_conversion_example.py  write_csv_example.py  write_file.py
scripts/: contributor_setup.py  pypi_latest_version.py  update_development_dependencies.py
src/tm_data_types/: __init__.py  io_factory_methods.py
src/tm_data_types/datum/: __init__.py  data_types.py  datum.py
src/tm_data_types/datum/waveforms/: __init__.py  analog_waveform.py  digital_waveform.py  iq_waveform.py  waveform.py
src/tm_data_types/files_and_formats/: __init__.py  abstracted_file.py  waveform_file.py
src/tm_data_types/files_and_formats/csv/: __init__.py  csv.py
src/tm_data_types/files_and_formats/csv/data_formats/: __init__.py  analog.py  digital.py  iq.py
src/tm_data_types/files_and_formats/mat/: __init__.py  mat.py
src/tm_data_types/files_and_formats/mat/data_formats/: __init__.py  analog.py  digital.py  iq.py
src/tm_data_types/files_and_formats/wfm/: __init__.py  wfm.py  wfm_data_classes.py  wfm_format.py
src/tm_data_types/files_and_formats/wfm/data_formats/: __init__.py  analog.py  digital.py  iq.py
src/tm_data_types/helpers/: __init__.py  byte_data_class.py  byte_data_types.py  class_lookup.py  enums.py  instrument_series.py
tests/: benchmark.py  conftest.py  requirements.txt  test_docs.py  test_tm_data_types.py
tests/waveforms/: analog_data.npy  analog_waveform.csv  analog_waveform.mat  analog_waveform.wfm  data_test_waveform.wfm  digital_data.npy  digital_waveform.csv  digital_waveform.wfm  golden_analog.wfm  iq_data.npy  iq_waveform.csv  iq_waveform.mat
tests/waveforms/invalid_waveforms/: invalid_csv.csv  invalid_extension.kkw  invalid_format.wfm  invalid_record_length.csv  invalid_tekmeta.wfm
